After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 738397 - "For example, ..." label shown when creating extended partition
"For example, ..." label shown when creating extended partition
Status: RESOLVED FIXED
Product: gnome-disk-utility
Classification: Core
Component: format dialog
3.12.x
Other Linux
: Normal minor
: ---
Assigned To: gnome-disk-utility-maint
gnome-disk-utility-maint
Depends on:
Blocks:
 
 
Reported: 2014-10-12 13:29 UTC by Thomas Perl
Modified: 2015-03-27 03:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot demonstrating the problem (55.58 KB, image/png)
2014-10-12 13:29 UTC, Thomas Perl
  Details
Proposed fix: Hide the example label with the entry (2.61 KB, patch)
2014-10-12 13:31 UTC, Thomas Perl
committed Details | Review

Description Thomas Perl 2014-10-12 13:29:23 UTC
The "For example, "My Files" or "Backup Data"" label is shown even "Type" is set to "Extended partition" in the "Create Partition" dialog.

Steps to reproduce:

 1. Open Disks
 2. Navigate to empty disk space
 3. Click on "New partition" ("+") button
 4. Select "Extended partition (For logical partitions)" in "Type"

Expected result:

 1. "For example, "My Files" or "Backup Data"" label is not shown
    (because there is no text entry to enter text)

Actual result:

 1. The label is shown
Comment 1 Thomas Perl 2014-10-12 13:29:54 UTC
Created attachment 288312 [details]
Screenshot demonstrating the problem
Comment 2 Thomas Perl 2014-10-12 13:31:25 UTC
Created attachment 288313 [details] [review]
Proposed fix: Hide the example label with the entry

Attached is a proposed fix, this hides the example label whenever the entry box is hidden.
Comment 3 Michael Catanzaro 2015-03-27 03:11:59 UTC
Looks good to me. Thanks!