Don't show label example when creating logical partition

The "For example, ..." label must not be shown when no name entry
is displayed.

https://bugzilla.gnome.org/show_bug.cgi?id=738397